<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergies_title"
    android:textSize="24sp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/allergiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergies_instruction"
    android:textSize="16sp"
    android:gravity="center"
    android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextAllergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/allergies_hint"
    android:layout_marginTop="18sp"
    android:inputType="text" />

    <TextView
        android:id="@+id/restrictionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restrictions_question"
    android:textSize="18sp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginTop="24dp" />

    <RadioGroup
        android:id="@+id/radioGroupRestrictions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/radioYesRestrictions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioNoRestrictions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

</LinearLayout>
