<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="287dp"
        android:layout_height="215dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:contentDescription="Logo"
        android:src="@drawable/logo"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/menuImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Menu Image"
        android:visibility="gone" /> <!-- Cacher l'image au départ -->

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/continue_button" />

    <!-- Nouveau bouton pour visiter le menu -->
    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/visit_menu_button" />

    <Switch
        android:id="@+id/languageSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_language"
        android:layout_gravity="center"
        android:checked="false" />

    <TextView
        android:id="@+id/currentLanguageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_language_label"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="16sp" />
</LinearLayout>
